✨ feat: enhance RAG agent with streaming response handling and input dialog

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
     "configurations": [
         {
             "name": "Launch main",
+            "console": "integratedTerminal",
             "type": "go",
             "request": "launch",
             "mode": "debug",
